--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,26 @@ html {
 }
 
 body {
-    width: 860px;
+    width: 80%;
+    max-width: 860px;
     margin: 0 auto;
     background-color: #ff9500;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
+}
+
+nav {
+    border: 2px solid #00539F;
+    background-color: #CCC;
+    padding: 5px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.positioned {
+    position: sticky;
+    top: 0px;
 }
 
 h1 {
