--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,10 @@ th {
 td {
     text-align: center;
 }
+
+td > p {
+    margin: 0;
+}
   
 tr:nth-child(even) td {
     background-color: rgb(250,250,250);
