--- a/styles/style.css
+++ b/styles/style.css
@@ -12,23 +12,29 @@ body {
     max-width: 860px;
     margin: 0 auto;
     background-color: #ff9500;
-    padding: 0 20px 20px 20px;
+    padding: 0;
     border: 5px solid black;
     flex-grow: 1;           /* fix the height problem, look html is part of the solution*/
 }
 
 nav {
-    border: 2px solid #00539F;
-    background-color: #CCC;
+    border: 2px solid black;
+    background-color: black;
+    color: aliceblue;
     padding: 5px;
     margin-top: 20px;
     display: flex;
     justify-content: space-around;
+    position: sticky;
+    top: 0px;
+}
+
+nav > a {
+    color: white;
 }
 
 .positioned {
-    position: sticky;
-    top: 0px;
+
 }
 
 h1 {
@@ -44,7 +50,9 @@ h2 {
     text-align: center;
 }
 
-p, ul {
+p, ul, time {
+    padding-left: 20px;
+    padding-right: 20px;
     font-size: 16px;
     line-height: 2;
     letter-spacing: 0px;
@@ -61,17 +69,26 @@ img {
 }
 
 aside {
-    width: 30%;
+    width: 27%;
     padding-left: .5rem;
-    margin-left: .5rem;
+    margin-left: 0px;
     float: right;
-    box-shadow: inset 5px 0px 5px -5px black;/*#29627e;*/
+    box-shadow: inset 5px 0px 2px -5px black;/*#29627e;*/
     font-style: italic;
     /*color: #29627e;*/
 }
 
 aside > p {
     margin: .5rem;
+}
+
+article p:first-of-type {
+    margin-bottom: 0em;
+}
+
+figcaption {
+    display: flex;
+    justify-content: space-around;
 }
 
 table {
