--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ nav {
     background-color: black;
     color: aliceblue;
     padding: 5px;
-    margin-top: 20px;
+    margin-top: 0px;
     display: flex;
     justify-content: space-around;
     position: sticky;
@@ -33,6 +33,7 @@ nav > a {
     color: white;
 }
 
+/* unused
 h1 {
     margin: 0;
     padding: 20px 0;
@@ -40,10 +41,11 @@ h1 {
     text-shadow: 3px 3px 2px black;
     font-size: 60px;
     text-align: center;
-}
+}*/ 
 
 h2 {
     text-align: center;
+    margin: 15px;
 }
 
 p, ul, time {
@@ -139,7 +141,7 @@ tfoot {
 }
 
 form {
-    width: fit-content;
+    width: max-content;
     padding-left: 20px;
 }
 
@@ -157,6 +159,7 @@ aside form {
 fieldset > p {
     padding: 0px;
     margin: 0px;
+    max-width: 400px;
 }
 
 .helmet {
@@ -171,4 +174,10 @@ fieldset > p {
 #btnlogin, #btncreate {
     position: relative;
     left: 170px;
+}
+
+.loginmain {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
